2011-10-29  Eric Seidel  <eric@webkit.org>

        new-run-webkit-tests is locale dependent
        https://bugs.webkit.org/show_bug.cgi?id=68691

        Reviewed by Adam Barth.

        Make NRWT use a clean environment just like ORWT did.
        I've manually validated that NRWT now copies over
        the same environment variables that ORWT did.
        This new code is exercised by existing setup_environ_for_server tests.

        * Scripts/webkitpy/layout_tests/port/base.py:
        * Scripts/webkitpy/layout_tests/port/efl.py:
        * Scripts/webkitpy/layout_tests/port/mac.py:
        * Scripts/webkitpy/layout_tests/port/qt.py:
        * Scripts/webkitpy/layout_tests/port/webkit.py:
        * Scripts/webkitpy/layout_tests/port/win.py:

2011-10-29  Eric Seidel  <eric@webkit.org>

        new-run-webkit-tests: MASTER BUG: Switch all webkit.org bots over
        https://bugs.webkit.org/show_bug.cgi?id=34984

        Reviewed by Adam Barth.

        Move run-webkit-tests from using a white-list of supported NRWT ports
        to a blacklist of ports requiring ORWT.

        I've also added the ability to opt-in to parallel testing on a per-port basis.

        With these changes I'm going to officially declare this bug dead and
        work on remaining polish issues and individual developer complaints.

        * Scripts/run-webkit-tests:
        (useNewRunWebKitTests):
        (platformIsReadyForParallelTesting):

2011-10-29  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r98780.
        http://trac.webkit.org/changeset/98780
        https://bugs.webkit.org/show_bug.cgi?id=71173

        Broke Qt bots (Requested by rniwa on #webkit).

        * Scripts/run-webkit-tests:
        (useNewRunWebKitTests):

2011-10-28  Rafael Weinstein  <rafaelw@chromium.org>

        webkit.py gdb visualizer is broken after change to StringImpl
        https://bugs.webkit.org/show_bug.cgi?id=71154

        Reviewed by Tony Chang.
