@@ -3,6 +3,18 @@
         new-run-webkit-tests is locale dependent
         https://bugs.webkit.org/show_bug.cgi?id=68691
 
+        Unreviewed.
+
+        Fix the Qt port and unittest the function so we don't break it again.
+
+        * Scripts/webkitpy/layout_tests/port/qt.py:
+        * Scripts/webkitpy/layout_tests/port/qt_unittest.py:
+
+2011-10-29  Eric Seidel  <eric@webkit.org>
+
+        new-run-webkit-tests is locale dependent
+        https://bugs.webkit.org/show_bug.cgi?id=68691
+
         Reviewed by Adam Barth.
 
         Make NRWT use a clean environment just like ORWT did.
